# luxamor

./: .gitignore  Cargo.toml  Cross.toml  README.md  Rocket.toml  example_automation.yaml  luxamor.toml.example
migrations/2024-02-14-151443_base/: down.sql  up.sql
src/: helpers.rs  main.rs  ratelimit.rs  routes.rs  schema.rs  settings.rs  tests.rs
src/db_structs/: mod.rs  pings.rs  users.rs
src/routes/: admin.rs  mod.rs  user.rs
static/: index.html.tera  login.html.tera  sayhi.html.tera
static/css/: style.css
