[package]
name = "luxamor"
version = "0.1.0"
edition = "2021"
authors = ["Vipra"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
rand = "0.8"
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = "0.11.24"
colors-transform = "0.2.11"
config = { version = "0.14.0" ,features = ["toml"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]